# ChatRobot

./: .env.example  .gitignore  README.md  copy_data.py  index.html  index_old.html  pyproject.toml
app/: config.py  logger.py  main.py
app/api/: routes.py
app/models/: api.py
app/services/: chat_history.py  embedding.py  hashing.py  rag.py  text_splitter.py  vector_store.py
data/milvus/: docker-compose.yml
scripts/: convert_encoding.py  create_sample_novel.py  upload_novels.py  utils.py
